Bug 475548. Don't let the view manager's DefaultBackgroundColor be translucent. r+sr=roc