layout/base/nsCSSRendering.cpp
@@ -1178,7 +1178,9 @@ nsCSSRendering::PaintBackground(nsPresContext* aPresContext,
 
   if (isCanvas) {
     nsIViewManager* vm = aPresContext->GetViewManager();
-    vm->SetDefaultBackgroundColor(color->mBackgroundColor);
+    vm->SetDefaultBackgroundColor(
+      NS_ComposeColors(aPresContext->DefaultBackgroundColor(),
+                       color->mBackgroundColor));
   }
 
   PaintBackgroundWithSC(aPresContext, aRenderingContext, aForFrame,
